workspaces/diff-engine/tests/snapshots/changelog_projections__can_query_empty_projection_for_changed_endpoints.snap
---
source: workspaces/diff-engine/tests/changelog-projections.rs
expression: "changelog_query.changed(Utc::now())"
---
[]
