workspaces/diff-engine/tests/snapshots/changelog_projections__changelog_with_added_events_can_query_added_endpoints_no_time.snap
---
source: workspaces/diff-engine/tests/changelog_projections.rs
expression: query.added(setup_no_time())
---
[]
