workspaces/diff-engine/tests/snapshots/changelog_projections__empty_changelog_can_query_added_endpoints.snap
---
source: workspaces/diff-engine/tests/changelog_projections.rs
expression: query.added(setup_all_time())
---
[]
