workspaces/diff-engine/tests/snapshots/changelog_projections__empty_events_gives_empty_projection.snap
---
source: workspaces/diff-engine/tests/changelog-projections.rs
expression: changelog_projection
---
ChangelogProjection {
    endpoints: [],
}
